the good thing is, that if you do not know how to continue, you can add more and more files to your project in preperation of the final presentation and delivery... you are not closer to your goal, but it feels like you have done something, even if you are only following your usual routine

--- a/now.json
+++ b/now.json
@@ -2,6 +2,6 @@
   "version": 2,
   "name": "permanentbeta.xyz",
   "builds": [
-  	{"src": "*.html", "use": "@now/static"}
+  	{ "src": "next.config.js", "use": "@now/next" }
   ]
 }
