--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.next
+node_modules
+.idea
 
 # Created by https://www.gitignore.io/api/macos,sublimetext
 # Edit at https://www.gitignore.io/?templates=macos,sublimetext
