--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-markdown": "^4.0.6"
+    "react-markdown": "^4.0.6",
+    "react-spring": "^8.0.19"
   }
 }
