--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.18.0",
     "isomorphic-unfetch": "^3.0.0",
+    "marked": "^0.6.2",
     "next": "^8.0.4",
     "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
