--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.18.0",
+    "cross-fetch": "^3.0.2",
     "isomorphic-unfetch": "^3.0.0",
     "marked": "^0.6.2",
     "next": "^8.0.4",
