--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.0.4",
     "node-sass": "^4.11.0",
+    "raw-loader": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.6",
