--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.6",
-    "react-spring": "^8.0.19"
+    "react-spring": "^8.0.19",
+    "semantic-ui-react": "^0.86.0"
   }
 }
