--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://permanentbeta.xyz",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.18.0",
     "isomorphic-unfetch": "^3.0.0",
@@ -29,6 +30,7 @@
     "react-dom": "^16.8.6",
     "react-markdown": "^4.0.6",
     "react-spring": "^8.0.19",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
   }
 }
