--- a/now.json
+++ b/now.json
@@ -1,7 +1,5 @@
 {
   "version": 2,
   "name": "permanentbeta.xyz",
-  "builds": [
-  	{ "src": "next.config.js", "use": "@now/next" }
-  ]
+  "builds": [{ "src": "package.json", "use": "@now/next" }]
 }
