--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.18.0",
+    "file-loader": "^3.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.0.4",
     "node-sass": "^4.11.0",
@@ -31,6 +32,8 @@
     "react-markdown": "^4.0.6",
     "react-spring": "^8.0.19",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "^0.86.0",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.6"
   }
 }
